payment.feature Tamamlandi. Testler Basariyla Gecildi

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,5 @@
 serenity.project.name = Demo Project using Appium, Serenity Screenplay and Cucumber
-
+serenity.take.screenshots=BEFORE_AND_AFTER_EACH_STEP
 webdriver.driver= appium
 appium.hub = http://localhost:4723/wd/hub
 ####### Android CAPS ######
